fix Connect w FB button alignment

--- a/src/SignupComponent/ConnectWith/Facebook/styles.module.scss
+++ b/src/SignupComponent/ConnectWith/Facebook/styles.module.scss
@@ -3,11 +3,10 @@
   justify-items: center;
 
   :global(.kep-login-facebook.metro) {
-    align-items: flex-end;
+    align-items: center;
     border-radius: 4px;
     display: flex;
     font-family: inherit;
-    font-size: 16px;
     justify-content: space-between;
     padding: 10px 12px;
     text-transform: unset;
